Fixed broken css

--- a/static/guzzle.css
+++ b/static/guzzle.css
@@ -112,11 +112,6 @@ div.highlight {
   font-weight: bold;
 }
 
-[class^="icon-"],
-[class*=" icon-"] {
-  background-image: url("../static/glyphicons-halflings.png");
-}
-
 .icon-white,
 .nav-pills > .active > a > [class^="icon-"],
 .nav-pills > .active > a > [class*=" icon-"],
@@ -134,7 +129,6 @@ div.highlight {
 .dropdown-submenu:focus > a > [class^="icon-"],
 .dropdown-submenu:hover > a > [class*=" icon-"],
 .dropdown-submenu:focus > a > [class*=" icon-"] {
-  background-image: url("../static/glyphicons-halflings-white.png");
 }
 
 a.internal em {
@@ -142,7 +136,6 @@ a.internal em {
 }
 
 dl dd {
-  margin-left: 30px;
   margin: 3px 0 10px 30px;
 }
 
@@ -250,7 +243,7 @@ table.two-column.table-bordered caption+thead tr:first-child th:first-child,
 table.two-column.table-bordered caption+tbody tr:first-child td:first-child,
 table.two-column.table-bordered colgroup+thead tr:first-child th:first-child,
 table.two-column.table-bordered colgroup+tbody tr:first-child td:first-child,
-table.two-column tbody td
+table.two-column tbody td {
   border: 0 0 1px 0 solid #eee;
   border-left: none;
   padding: 8px 4px;
